
  debug(1 | 4); # show all errors and uses of non-declared variables
- when passed an array parameter, &rand will return a random element of the
  array.
- eliminated the use of a busy loop to wait for a timeout within the &wait
  function
- &wait when called on a process will now wait for that process to exit
  and return the exit value of the process.

2.1-beta 2
===========
- added a few more FP-style functions to Sleep:
  &reduce(&closure, @array)
  &search(@array, &closure, [index])
  &filter(@array, &closure)
- added &replaceAt("original", "new", index, [chars to delete]);
- added &mid("string", index, n chars) to extract a substring equivalent to 
  &substr("string", index, index + n chars) 
- exposed the IO Process, File, and Socket using a new method added to 
  IOObject: getSource().  This will allow scripters to query the IO source 
  using HOES if there is some API Sleep does not bridge. (i.e. exit value of a
  process)
- added an API to SleepUtils for building an IO handle scalar from a Java 
  InputStream/OutputStream
- added a debug flag to each script instance.  the options consist of:

  DEBUG_SHOW_ERRORS = 1 - this is the typical behavior that causes a runtime 
     warning to be fired whenever an uncaught exception occurs within a bridge.
  DEBUG_SHOW_WARNINGS = 2 - fires a runtime warning any time an error
     is flagged using flagError() in the script environment.  runtime warnings
     are typically errors a scripter is meant to check for with 
     checkError($error).  
  DEBUG_NONE = 0 - disables all firing of runtime warnings (not recommended)

  Sleep scripts on the command line can run with different debug levels using:
  java -Dsleep.debug=3 -jar sleep.jar filename.sl
- foreach can now iterate over closures..  if a closure is passed to foreach 
  then the closure will be called continuously until a $null is returned.
- added a few functions for performing set type operations on @arrays