@@ -1,0 +1,8 @@
+Before: Contents of @a (temp1 is this is a test)
+this is a test
+After: Contents of @a (temp1 is this is a test)
+this is a changed value
+Before: Contents of @b (temp2 is this is a test)
+this is a test
+After: Contents of @b (temp2 is this is a test)
+this is a changed value
