@@ -1,0 +1,55 @@
+5
+6
+7
+8
+9
+10
+11
+12
+13
+14
+15
+16
+17
+18
+19
+Size of @temp is: 100
+19
+18
+17
+16
+15
+14
+13
+12
+11
+10
+9
+8
+7
+6
+5
+Size of @temp2 is: 15
+5
+6
+7
+8
+9
+10
+11
+12
+13
+14
+15
+16
+17
+18
+19
+All of the even numbered elements of @temp2 are: 
+6
+8
+10
+12
+14
+16
+18
